# CoinCoinBot

./: .env_dist  Cargo.toml  README.md  TODO.md  transaction.db
src/: .env_dist  api.rs  database.rs  main.rs  trade.rs
