[package]
name = "coincoinbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version="0.27.0", features=["bundled"] }
chrono = { version="0.4.19" }
dotenvy = { version="0.15" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version="1", features = ["derive"] }
serde_json = { version="1" }

# Needed for coinbase prehash
hmac = "0.12.1"
sha2 = "0.10.2"
hex = "0.4.3"
